--- a/style/components/projects.css
+++ b/style/components/projects.css
@@ -19,6 +19,7 @@
 .projects__img{
     display: flex;
     position: relative;
+    max-width: 400px;
 }
 
 .projects__img::after{
@@ -40,6 +41,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    
 }
 
 .projects__wraps:not(:last-child){
@@ -49,26 +51,28 @@
 .projects__item{
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .projects__item h4{
-    font-size: var(--size-l);
+    font-size: var(--size-xl);
     color: var(--clr-slate400);
     text-align: center;
 }
 
 .projects__item p{
-    margin: 0.5rem auto;
+    margin: 1em auto;
     text-align: center;
     line-height: 1rem;
-    max-width: 60ch;
+    max-width: 40ch;
     color: var(--clr-slate600);
     font-size: var(--size-s);
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .projects__item button{
     align-self: center;
+    box-shadow: 0px 0px 10px 1px rgba(244, 63, 94, 0.6);
 }
 
 
@@ -80,26 +84,85 @@
 
 /* xs */
 @media (min-width:475px) {
-.projects__item h4{
-    font-size: var(--size-xl);
-}
-.projects__item p{
-    max-width: 40ch;
-}
+    .projects__item h4{
+        font-size: var(--size-xl);
+    }
 }
 
 /* s */
 @media (min-width:640px) {
+    .projects__img{
+        display: flex;
+        position: relative;
+        max-width: 600px;
+    }
+    .projects__wraps{
+        place-items: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        'image1 content1'
+        'content2 image2'
+        'image3 content3'
+        'content4 image4'
+        'image5 content5'
+        'content6 image6';
+    }
+    .project__image1{
+        grid-area: image1;
+    }
+    .project__image2{
+        grid-area: image2;
+    }
+    .project__image3{
+        grid-area: image3;
+    }
+    .project__image4{
+        grid-area: image4;
+    }
+    .project__image5{
+        grid-area: image5;
+    }
+    .project__image6{
+        grid-area: image6;
+    }
+    .project__content1{
+        grid-area: content1;
+    }
+    .project__content2{
+        grid-area: content2;
+    }
+    .project__content3{
+        grid-area: content3;
+    }
+    .project__content4{
+        grid-area: content4;
+    }
+    .project__content5{
+        grid-area: content5;
+    }
+    .project__content6{
+        grid-area: content6;
+    }
+    .projects__item p{
+        margin:0;
+    }
+    .projects__wraps:not(:last-child){
+        margin:0;
+    }
+    .projects__wraps:first-child{
+        margin-top: 5rem;
+    }
 .projects__top_description{
     font-size: var(--size-base);
 }
 .projects__item h4{
-    font-size: var(--size-xl);
+    font-size: var(--size-2xl);
 }
 
 .projects__item p{
-    font-size: var(--size-base);
-    font-weight: 500;
+    margin: 0.5em auto;
+    max-width: 50ch;
 }
 
 }
@@ -109,11 +172,18 @@
 .projects__item h4{
     font-size: var(--size-2xl);
 }
+.projects__item p{
+    font-size: var(--size-base);
+    padding: 0 1em;
+}
 }
 
 
 /* l */
 @media (min-width:1024px) {
+.projects__img{
+    max-width: none;
+}
 .projects__top_description{
     font-size: var(--size-l);
 }
@@ -122,68 +192,19 @@
 }
 .projects__item p{
     font-size: var(--size-l);
-    max-width: 40ch;
+    font-weight: 600;
+    max-width: 50ch;
     line-height: 1rem;
 }
 .projects__item{
     gap: 1rem;
-}
-.projects__wraps{
-    place-items: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
-    'image1 content1'
-    'content2 image2'
-    'image3 content3'
-    'content4 image4'
-    'image5 content5';
-}
-.project__image1{
-    grid-area: image1;
-}
-.project__image2{
-    grid-area: image2;
-}
-.project__image3{
-    grid-area: image3;
-}
-.project__image4{
-    grid-area: image4;
-}
-.project__image5{
-    grid-area: image5;
-}
-.project__content1{
-    grid-area: content1;
-}
-.project__content2{
-    grid-area: content2;
-}
-.project__content3{
-    grid-area: content3;
-}
-.project__content4{
-    grid-area: content4;
-}
-.project__content5{
-    grid-area: content5;
-}
-.projects__item p{
-    margin:0;
-}
-.projects__wraps:not(:last-child){
-    margin:0;
-}
-.projects__wraps:first-child{
-    margin-top: 5rem;
 }
 }
 
 /* xl */
 @media (min-width:1280px) {
 .projects__item p{
-    font-weight: 600;
+    
     line-height: calc(1em + 0.3rem);
 }
 .projects__item h4{
@@ -192,6 +213,4 @@
 }
 
 /* 2xl */
-@media (min-width:1536px) {
-
-}
+/* @media (min-width:1536px) {} */
