--- a/style/utility.css
+++ b/style/utility.css
@@ -94,7 +94,7 @@ button{
     font-weight: 600;
     text-decoration: none;
     letter-spacing: -0.05em;
-    color:#f5f5f4;
+    color:#f5f5f4e7;
     background: var(--clr-rose);
     padding: 0.5em 1em;
     border-radius: 6px;
